# kitest

./: Cargo.toml  LICENSE  README.md  TODO.md  build.rs
.github/workflows/: ci.yml
doc/: Cargo.toml  ansi_to_html.rs
doc/ansi/: group_by_flag.ansi  lib.ansi  regular.ansi  test.ansi
doc/crate/: ansi_to_html.rs
doc/html/: group_by_flag.ansi.html  lib.ansi.html  regular.ansi.html  test.ansi.html
examples/: basic.rs  before_each.rs  default.rs  group_by_flag.rs  list.rs  terse.rs
examples/macros/: main.rs
examples/macros/support/: Cargo.toml  macros.rs
logo/: logo.afdesign
src/: capture.rs  filter.rs  filter2.rs  group.rs  grouper.rs  ignore.rs  lib.rs  meta.rs  outcome.rs  panic_handler.rs  report.rs  runner.rs  test.rs  test_support.rs  util.rs  whatever.rs
src/formatter/: common.rs  mod.rs  no.rs  pretty.rs  terse.rs
src/formatter/common/: color.rs  fto.rs  label.rs  mod.rs
src/harness/: grouped_test.rs  mod.rs  test.rs
src/strategy/: filter.rs  group.rs  ignore.rs  mod.rs  panic_handler.rs  runner.rs
src/strategy/filter/: default.rs  mod.rs  no.rs
src/strategy/group/: group_runner.rs  grouper.rs  groups.rs  mod.rs
src/strategy/ignore/: default.rs  mod.rs  no.rs
src/strategy/panic/: default.rs  mod.rs  no.rs
src/strategy/panic_handler/: default.rs  no.rs
src/strategy/runner/: default.rs  mod.rs  scope.rs  simple.rs  smart.rs
tests/snapshot/: all_ok.rs  main.rs  snapshots.rs  tests.rs
tests/snapshot/lib/: mod.rs  sanitize.rs  test.rs
tests/snapshot/snapshots/: all_ignored.rs  all_panic.rs  expected_panic.rs  panic_in_the_middle.rs  single_error.rs  single_ignored.rs  single_ok.rs  single_panic.rs
tests/snapshot/tests/: all_ok.rs
(+3 files in other folders)
