[package]
name = "kitest"
version = "0.1.0"
edition = "2024"
publish = false
rust-version = "1.88.0"
description = "A composable test harness toolkit with room to fly."
repository = "https://github.com/cptpiepmatz/kitest"
license = "MIT"
keywords = ["testing", "test-harness", "harness", "framework"]
categories = ["command-line-utilities", "development-tools", "development-tools::testing"]
include = [
  "doc/html/**",
  "logo/logo.svg",
  "src/**"
]

[dependencies]
crossbeam-channel = "0.5.15"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(ci)', "cfg(snapshot)"] }

[workspace]
resolver = "3"
members = ["examples/macros/support", "doc/crate"]

[dev-dependencies]
linkme = "0.3.35"
macros-support = { path = "./examples/macros/support" }
pretty_assertions = "1.4.1"
regex = "1.12.2"
